# scikit-build

./: .codecov.yml  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .packit.yaml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  circle.yml  cmaker.py  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  scikit-ci.yml  setup.cfg  setup.py  tox.ini  versioneer.py
.circleci/: config.yml
.distro/: python-scikit-build.spec  scikit-build.spec
.github/: codecov.yml
ci/: appveyor_driver.py  build.cmd  circle_driver.py  driver.py  travis_driver.py  travis_install.sh
docs/: cmake-modules.rst  cmake.py  conf.py  extension_build_system.rst  generators.rst  hacking.rst  history.md  history.rst  index.rst  installation.rst  make_a_release.rst  modules.rst  notes.rst  skbuild.command.rst  skbuild.platform_specifics.rst  skbuild.rst  skbuild.utils.rst  usage.rst
platform_specifics/: __init__.py  abstract.py  linux.py  osx.py  platform_factory.py  windows.py
pycmake/: __init__.py  cmaker.py  distutils_wrap.py  distutils_wrapper.py  pycmake_setup.py
skbuild/: __init__.py  _cmaker.py  _constants.py  _setuptools_wrap.py  _version.py  _version.pyi  cmaker.py  compat.py  constants.py  distutils_wrap.py  exceptions.py  setuptools_wrap.py  typing.py  utils.py
test_projects/: README.rst
test_projects/purecpython_test1/: CMakeLists.txt  README.rst  test_installation.py
test_projects/purecpython_test1/test1/: CMakeLists.txt  test1.c
test_projects/purecpython_test1/test1/src/: test1.c
tests/: README.rst  __init__.py  common.py  conftest.py  exec_2.py  exec_3.py  pytest_helpers.py  test_PyCMake.py  test_broken_project.py  test_cmake_target.py  test_cmakelists_not_in_top_level_dir.py  test_cmaker.py  test_command_line.py  test_compat_shims.py  test_constants.py  test_current_platform.py  (+38 more)
tests/purecpython_test1/: CMakeLists.txt  setup.py  test_installation.py
tests/purecpython_test1/test1/: test1.c
tests/purecpython_test1/tests/: test_test1.py
tests/samples/fail-outside-project-root/: CMakeLists.txt  setup.py
tests/samples/fail-outside-project-root/other_project/: CMakeLists.txt
tests/samples/hello/: CMakeLists.txt  setup.py
tests/samples/hello-cpp/: CMakeLists.txt  MANIFEST.in  setup.py
tests/samples/hello-cpp/bonjour/data/: ciel.txt  soleil.txt
tests/samples/hello-cpp/hello/: CMakeLists.txt  __main__.py  _hello.cxx
tests/samples/hello-ctypes/: CMakeLists.txt  setup.py
tests/samples/hello-ctypes/hello/: __init__.py  __main__.py
tests/samples/hello-ctypes/src/: hello.cxx  hello.h
tests/samples/hello-cython/: CMakeLists.txt  MANIFEST.in  setup.py
tests/samples/hello-cython/hello/: CMakeLists.txt  __main__.py  _hello.pyx
tests/samples/hello-fortran/bonjour/: CMakeLists.txt  _bonjour.f90  _bonjour.pyf
tests/samples/hello-fortran/hello/: CMakeLists.txt  __main__.py  _hello.f90
tests/samples/hello-numpy/: CMakeLists.txt  MANIFEST  pyproject.toml  setup.py
tests/samples/hello-numpy/src/hello/: __init__.py  hello_py.cpp
tests/samples/hello-pep518/: CMakeLists.txt  README.md  pyproject.toml  setup.py
tests/samples/hello-pep518/src/hello/: __init__.py  hello_py.cpp
tests/samples/hello/hello/: CMakeLists.txt  __init__.py  __main__.py
tests/samples/issue-335-support-cmake-source-dir/: CMakeLists.txt  README.md  bar.cpp  bar.h  foo.cpp  foo.h  main.cpp  requirements-dev.txt
tests/samples/issue-335-support-cmake-source-dir/swig/: CMakeLists.txt  swig-mwe.i
tests/samples/issue-335-support-cmake-source-dir/swig/python/: CMakeLists.txt  pyproject.toml  setup.py  test.py
tests/samples/issue-335-support-cmake-source-dir/wrapping/python/: CMakeLists.txt  setup.py
tests/samples/issue-546-editable-subproject/: CMakeLists.txt  pyproject.toml  setup.py
tests/samples/issue-546-editable-subproject/src/pkg/: __init__.py  module.cpp
tests/samples/issue-707-nested-packages/: CMakeLists.txt  pyproject.toml  setup.py
tests/samples/issue-707-nested-packages/hello/: CMakeLists.txt  __init__.py
tests/samples/issue-707-nested-packages/hello/goodbye/: CMakeLists.txt  __init__.py
tests/samples/issue-707-nested-packages/hello_nested/: __init__.py  _hello_nested.pyx
tests/samples/issue-707-nested-packages/hello_nested/goodbye_nested/: __init__.py  _goodbye_nested.pyx
tests/samples/issue-707-nested-packages/tests/: test_hello_cython.py
tests/samples/issue-xxx-multi-package-with-package-dir/: CMakeLists.txt  demo_issue.sh  setup.py
tests/samples/issue-xxx-multi-package-with-package-dir/src/cxx/: CMakeLists.txt  my_extern_clib.c  my_extern_clib.h
tests/samples/issue-xxx-multi-package-with-package-dir/src/python/my_skb_mod/: CMakeLists.txt  __init__.py  _myalgo_cython.pyx
tests/samples/issue-xxx-multi-package-with-package-dir/src/python/my_skb_mod/submod/: __init__.py  module_resource.json
tests/samples/pen2-cython/: CMakeLists.txt  requirements-dev.txt  setup.py
tests/samples/pen2-cython/scripts/: CMakeLists.txt  pen2_cython
tests/samples/pen2-cython/src/: CMakeLists.txt  __init__.py  __main__.py  _pen2.pyx
tests/samples/test-cmake-target/: CMakeLists.txt  setup.py
tests/samples/test-filter-manifest/: CMakeLists.txt
tests/samples/test-filter-manifest/wrapping/python/: CMakeLists.txt  setup.py
tests/samples/tower-of-babel/: CMakeLists.txt  requirements-dev.txt  setup.py  tbabel_boost_common.h  tbabel_boost_common_imp.h  tbabel_boost_module.cxx  tbabel_boost_module.h  tbabel_boost_module.pxd  tbabel_boost_shared.cxx  tbabel_boost_shared.h  tbabel_boost_shared.pxd  tbabel_boost_static.cxx  tbabel_boost_static.h  tbabel_boost_static.pxd  tbabel_cython_common.pxi  tbabel_cython_common_imp.pxi  tbabel_cython_module.pyx  tbabel_cython_shared.pyx  tbabel_cython_static.pxd  tbabel_cython_static.pyx  tbabel_python.py
tests/samples/tower-of-babel/scripts/: CMakeLists.txt  tbabel.pyx
(+184 files in other folders)
