[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "skbuild/_version.py"


[tool.check-manifest]
ignore = [
  "skbuild/_version.py",
  "docs/**",
  ".*",
  "noxfile.py",
  "azure-pipelines.yml",
]


[tool.black]
line-length = 120


[tool.isort]
profile = "black"
known_third_party = ["distutils"]
force_to_top = ["setuptools"]


[tool.mypy]
files = ["skbuild"]
python_version = "3.6"
warn_unused_configs = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true

[[tool.mypy.overrides]]
module = [
  "wheel.*",
  "setuptools.logging",
  "setuptools.command.*",
  "numpy",
  "distro",
]
ignore_missing_imports = true


[tool.pylint]
master.py-version = "3.6"
master.jobs = "0"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.enable = [
  "useless-suppression",
]
messages_control.disable = [
  "deprecated-module", # distutils usage
  "fixme",
  "invalid-name",
  "line-too-long",
  "missing-module-docstring",
  "no-member",
  "protected-access",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-locals",
  "too-many-statements",
  "ungrouped-imports",
  "wrong-import-order",
  "wrong-import-position",
]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
norecursedirs = ["_skbuild"]
xfail_strict = true
filterwarnings = [
  'error',
  'default:setup.py install is deprecated:Warning',
  'default:easy_install command is deprecated:Warning',
  'default:setuptools.installer and fetch_build_eggs are deprecated:Warning',
  'ignore:.*ends with a trailing slash, which is not supported by setuptools:FutureWarning',
  "ignore:Config variable 'Py_DEBUG' is unset:RuntimeWarning",
  "ignore:Config variable 'WITH_PYMALLOC' is unset, Python ABI tag may be incorrect:RuntimeWarning",
  'default:\s*Installing .* as data is deprecated:Warning',
  'default:shell/Perl-style subs.* are deprecated:DeprecationWarning',
  'default:subprocess .* is still running:ResourceWarning',
]
log_cli_level = "info"
markers = [
  "fortran: Fortran testing",
  "deprecated: These tests deprecated setuptools features",
  "nosetuptoolsscm: Requires setuptools_scm to not be installed",
  "isolated: Downloads dependencies and sets up isolated environments",
]


[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",  "B904",  # flake8-bugbear
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
extend-ignore = ["PLR", "E501", "SIM117"]
target-version = "py37"
typing-modules = ["scikit_build_core._compat.typing"]
line-length = 120
src = ["src"]
unfixable = ["T20", "F841"]
exclude = []
flake8-unused-arguments.ignore-variadic-names = true

[tool.ruff.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
